<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TableActivity">

    <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:onClick="goBack"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TableLayout
            android:layout_width="0dp"
            android:layout_height="328dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/applicationDesc">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/tech"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_column="1" android:id="@+id/technical" android:textStyle="bold"/>
            <TextView
                    android:text="@string/art"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_column="2" android:id="@+id/art" android:textStyle="bold"/>
            <TextView
                    android:text="@string/games"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_column="3" android:id="@+id/games" android:textStyle="bold"/>
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/arch"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_column="1" android:id="@+id/arch"/>
            <TextView
                    android:text="@string/cgi"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_column="2" android:id="@+id/cgi"/>
            <TextView
                    android:text="@string/characters"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_column="3" android:id="@+id/character"/>
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/car"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_column="1" android:id="@+id/vehicles"/>
            <TextView
                    android:text="@string/animation"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_column="2"/>
            <TextView
                    android:text="@string/environ"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_column="3" android:id="@+id/environments"/>
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/elect"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_column="1" android:id="@+id/electronics"/>
            <TextView
                    android:text="@string/artwork"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_column="2" android:id="@+id/artworks"/>
            <TextView
                    android:text="@string/concept"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_column="3" android:id="@+id/concept"/>
        </TableRow>
    </TableLayout>
    <TextView
            android:text="@string/applicationDesc"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:id="@+id/applicationDesc" android:layout_marginTop="56dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>