<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VertLinear">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="363dp"
            android:layout_height="611dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:text="@string/about_3D_modeling"
                android:layout_width="match_parent"
                android:layout_height="50dp" android:id="@+id/textView2" android:textSize="24sp"/>
        <TextView
                android:text="@string/modeling_desciptiont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView3"
                android:textAlignment="viewStart"/>
        <TextView
                android:text="@string/my_interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView4"
                android:textAlignment="viewStart"/>
        <TextView
                android:text="@string/common_uses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView5"
                android:textAlignment="viewStart"/>
        <TextView
                android:text="@string/how_to_learn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView6"
                android:textAlignment="viewStart"/>
    </LinearLayout>
    <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:onClick="goBack"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>