<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HorLinear">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:id="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:text="@string/retopo"
                android:layout_width="40dp"
                android:layout_height="40dp" android:id="@+id/retopo" android:layout_weight="1"/>
        <TextView
                android:text="@string/retopDesc"
                android:layout_width="40dp"
                android:layout_height="match_parent" android:id="@+id/retopoDesc" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:id="@+id/linearLayout3" app:layout_constraintHorizontal_bias="1.0">
        <TextView
                android:text="@string/rigging"
                android:layout_width="40dp"
                android:layout_height="40dp" android:id="@+id/rigging" android:layout_weight="1"/>
        <TextView
                android:text="@string/riggingDesc"
                android:layout_width="40dp"
                android:layout_height="match_parent" android:id="@+id/riggingDesc" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" android:id="@+id/linearLayout4"
            app:layout_constraintHorizontal_bias="1.0">
        <TextView
                android:text="@string/skinning"
                android:layout_width="40dp"
                android:layout_height="40dp" android:id="@+id/skinning" android:layout_weight="1"/>
        <TextView
                android:text="@string/skinDesc"
                android:layout_width="40dp"
                android:layout_height="match_parent" android:id="@+id/skinningDesc" android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:id="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="1.0">
        <TextView
                android:text="@string/uvMapping"
                android:layout_width="40dp"
                android:layout_height="40dp" android:id="@+id/uvMapping" android:layout_weight="1"/>
        <TextView
                android:text="@string/uvDesc"
                android:layout_width="40dp"
                android:layout_height="match_parent" android:id="@+id/uvMappingDesc" android:layout_weight="1"/>/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:layout_constraintHorizontal_bias="1.0">
        <TextView
                android:text="@string/animation"
                android:layout_width="40dp"
                android:layout_height="40dp" android:id="@+id/animation" android:layout_weight="1"/>
        <TextView
                android:text="@string/animDesc"
                android:layout_width="40dp"
                android:layout_height="match_parent" android:id="@+id/animationDesc" android:layout_weight="1"/>
    </LinearLayout>
    <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:onClick="goBack"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/workflowDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/basicModel"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>