<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/modeling_work_flow"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/HorLinear"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/VertLinear"
            android:onClick="onClick"/>
    <Button
            android:text="@string/current_project"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/FrameActivity"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/TableActivity"
            android:onClick="onClick"/>
    <Button
            android:text="@string/applications"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/TableActivity"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/HorLinear"
            android:onClick="onClick"/>
    <Button
            android:text="@string/settings"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/NestedActivity"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/FrameActivity"
            android:onClick="onClick"/>
    <Button
            android:text="@string/about_3D_modeling"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/VertLinear"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="56dp" app:layout_constraintTop_toTopOf="parent"
            android:onClick="onClick"/>
</androidx.constraintlayout.widget.ConstraintLayout>