<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NestedActivity">


    <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:onClick="goBack"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="362dp"
            android:layout_height="341dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintHorizontal_bias="0.0">

        <TextView android:layout_width="match_parent" android:layout_height="40dp"
                  android:text="@string/settings" android:textSize="24sp"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" android:id="@+id/darkMode" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="parent">
            <TextView
                    android:text="@string/darkmode"
                    android:layout_width="40dp"
                    android:layout_height="40dp" android:id="@+id/setttingsDarkMode" android:layout_weight="1"/>
            <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp" android:id="@+id/onOff" android:layout_weight="1"
                    android:onClick="nightModeToggle"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" android:id="@+id/textSize" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="parent">
            <TextView
                    android:text="@string/textSize"
                    android:layout_width="40dp"
                    android:layout_height="40dp" android:id="@+id/fontSize" android:layout_weight="1"
            />
            <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp" android:id="@+id/smallMediumLarge" android:layout_weight="1"
                    android:onClick="changeTextSize"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" android:id="@+id/something" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="parent">
            <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp" android:id="@+id/doesThis" android:layout_weight="1"/>
            <Button
                    android:text="@string/nothing"
                    android:layout_width="40dp"
                    android:layout_height="40dp" android:id="@+id/except" android:layout_weight="1"
                    android:onClick="doNothing"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>